[gd_scene load_steps=3 format=3 uid="uid://d4d7ecqlohxt"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_50n6b"]
[ext_resource type="PackedScene" uid="uid://65w17xmk8mqq" path="res://Scenes/lane.tscn" id="1_peffo"]

[node name="Game" type="Node3D"]
script = ExtResource("1_50n6b")

[node name="Towers" type="Node3D" parent="."]

[node name="Lanes" type="Node3D" parent="."]

[node name="Lane1" parent="Lanes" instance=ExtResource("1_peffo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)

[node name="Lane2" parent="Lanes" instance=ExtResource("1_peffo")]

[node name="Lane3" parent="Lanes" instance=ExtResource("1_peffo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.75261, 0.658466, 0, -0.658466, 0.75261, 0, 3.54834, 6.19382)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0157248, 0.999876, 0, -0.999876, 0.0157248, 0, 5.26391, 0)
